2001-11-13  Neil Jerram  <neil@ossau.uklinux.net>

	* random.c (scm_random_solid_sphere_x,
	scm_random_hollow_sphere_x): Correct "shere" typos.

	* hashtab.c (scm_hash_fold): Add missing apostrophe to docstring.

	* version.c (scm_version): Update docstring to include
	`micro-version'.

2001-11-13  Marius Vollmer  <mvo@zagadka.ping.de>

	* modules.c (scm_c_export): Call va_end after collecting the
	symbols.

	* strop.h, strop.c (scm_substring_move_left_x,
	scm_substring_move_right_x): Removed.

	* __scm.h (HAVE_UINTPTR_T, HAVE_PTRDIFF_T, HAVE_LONG_LONG,
	HAVE_LONG_LONGS): Define to "1" when defining them, to mirror what
	configure does.

2001-11-12  Marius Vollmer  <mvo@zagadka.ping.de>

	* numbers.c: Document macros to define when including
	num2integral.i.c.  MAX_VALUE and MIN_VALU are no longer used, we
	now rely on SIZEOF_ macros that have been figured out at
	configure time.

	* num2integral.i.c: Adapt to new interface.
	(NUM2INTEGRAL): Test whether a fixnum can be represented in the
	target type by casting it and checking whether it is still the
	same.  Do not try to handle bignums for integral types that are
	smaller than fixnums.  When handling bignums, collect the
	magnituse first into a unsigned type, and correctly check for
	overflow.
	(INTEGRAL2BIG): Do not use MIN_VALUE explicitely by observing that
	only -MIN_VALUE can still be negative of all negative numbers (in
	twos-complement).

	* tags.h (SIZEOF_SCM_T_BITS): Define it appropriately. 

	* __scm.h: Define HAVE_UINTPTR_T, HAVE_PTRDIFF_T and
	HAVE_LONG_LONG depending on whether their size is non-zero.

2001-11-11  Thien-Thi Nguyen  <ttn@glug.org>

	* strop.c (scm_string_null_p): Docfix; nfc.
	Thanks to Scott Lenser.

2001-11-07  Neil Jerram  <neil@ossau.uklinux.net>

	* extensions.c (scm_load_extension): Canonicalize docstring
	whitespace.

	* unif.c (scm_uniform_array_write), ports.c
	(scm_current_output_port, scm_force_output), dynwind.c